<resources>
    <string name="app_name">LiveGaze Companion App</string>
    <string name="title_live">Live</string>
    <string name="title_logs">Logs</string>
    <string name="server_connection">Connecting to server…</string>
    <string name="companion_connection"> Connecting to companion…</string>
    <string name="first_video_frame_decoded">First Video Frame Decoded!</string>
    <string name="server_connected">Connected to server!</string>
    <string name="companion_connected">Connected to companion!</string>
    <string name="refresh_connection_button_text">Refresh Connection</string>
    <string name="calibration">Calibration</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="device_not_found">Device not found, are the eye trackers safely connected?</string>
    <string name="enter_server_ip">Enter IP address</string>
</resources>
